fixed responsive issues with H3 component

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,9 @@ const today = new Date();
   <div class="container container-large">
     <div class="padding-global">
       <div class="w-full h-full py-24 items-center flex flex-col">
-        <div class="flex flex-col md:flex-row gap-20 mb-8 font-bold text-lg">
+        <div
+          class="flex flex-col md:flex-row gap-4 md:gap-20 mb-8 font-bold text-lg"
+        >
           <a href="/contact">Portfolio</a>
           <a href="/contact">Blog</a>
           <a href="/contact">Contact</a>
