--- a/src/components/Position.astro
+++ b/src/components/Position.astro
@@ -14,7 +14,11 @@ const { title, location, years, description } = Astro.props as Props;
 <div class="w-full lg:w-1/2">
   <div class="flex flex-col gap-1">
     <div class="flex flex-start">
-      <H3 header={title} classes="text-lg font-bold" />
+      <H3
+        header={title}
+        classes="text-lg font-bold"
+        hideBracketOnMobile={true}
+      />
     </div>
     <div><span class="font-bold">{location}</span></div>
     <div><span class="text-purple">{years}</span></div>
