--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -48,7 +48,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
       </div>
       <!-- Education & Certifications -->
       <div class="padding-extra">
-        <h2 class="mt-24 mb-16">Education & Certifications</h2>
+        <h2 class="mt-24 mb-16">Certifications & Education</h2>
         <div>
           <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-10">
             <Certification
