fixed alignment issue in experience section

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -17,7 +17,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
         <h2 class="mb-12 padding-extra">Work Experience</h2>
         <div class="flex flex-col lg:flex-row gap-24 mb-16 padding-extra">
           <Position
-            title="Front-End Developer & UX/UI Specialist"
+            title="Front-End Developer & UX/UI"
             location="The Luminary Agency"
             years="2021 - Present (Part Time)"
             description="Developed responsive web interfaces using WordPress, Webflow, Squarespace, and HTML/CSS/JavaScript. Created UI wireframe designs with Figma, Relume, and Balsamiq, improving user experience and navigability. Collaborated on brand aesthetics with the design team, ensuring cohesive visual strategies across platforms. Achievements include 1,000% traffic increase, 150% higher conversion rates, and 15% lower bounce rates."
@@ -38,7 +38,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
               description="Led a team in a comprehensive marketing and sales campaign, leveraging display, PPC, email, and SEO, increasing conversions by 30%. Proposed UX/UI enhancements using A/B testing, user recordings, and heatmaps to boost conversions. Guided engineering in aligning product prototypes with optimal UX design principles and business objectives. Conducted in-depth market and sales trend analysis over six years, positioning the company as an industry leader."
             />
             <Position
-              title="Inbound Marketing & UX Specialist"
+              title="Inbound Marketing & UX/UI"
               location="Cruiseline.com"
               years="2015 - 2018"
               description="Crafted a robust content and email strategy, enhancing site and email presence through rebranding, SEO, and compelling editorial pieces which lead to a 900% increase in site traffic. Managed weekly analytics, leveraging insights to optimize content and marketing strategies. Collaborated with engineers to create a display ad network, generating upwards of $200k annually. Performed usability testing on new products, writing detailed feedback and bug reports for the dev team to optimize new features before launch."
@@ -48,7 +48,7 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
       </div>
       <!-- Education & Certifications -->
       <div class="padding-extra">
-        <h2 class="mt-24 mb-16">Certifications & Education</h2>
+        <h2 class="mt-24 mb-16">Education & Certifications</h2>
         <div>
           <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-10">
             <Certification
