--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -5,7 +5,7 @@ import graphic from "../images/graphics/graphic-1.webp";
 ---
 
 <section class="">
-  <div class="bg-purple min-h-96">
+  <div class="bg-purple pt-6">
     <div class="container container-large">
       <div class="padding-global relative overflow-visible">
         <div class="grid grid-cols-5 gap-8 py-16">
