--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -7,25 +7,14 @@ import designIcon from "../images/icons/design-icon.png";
 
 <section>
   <div class="container container-large">
-    <div class="padding-global py-36">
+    <div class="padding-global py-20 md:py-36">
       <div>
         <div class="flex justify-center">
-          <h2 class="text-center mb-8 max-w-5xl">
+          <h2 class="text-center mb-8 max-w-2xl lg:max-w-5xl">
             I use a holistic skillset of engineering, user behavior, and product
             strategy to polish ideas to perfection.
           </h2>
         </div>
-
-        <!-- <p class="text-center text-xl">
-        With over a <strong>decade</strong> of experience in digital product
-        development, I create seamless experiences that let users achieve their
-        goals without friction, leading to higher customer satisfaction and
-        increased sales.
-      </p> -->
-        <!-- <p class="text-center">
-          With a holistic skillset of engineering, user behavior, and product
-          strategy, <strong>I turn thoughts into tangible realities.</strong>
-        </p> -->
         <div class="mt-4"></div>
         <!-- 3 Boxes -->
         <div class="flex items-center justify-center">
