--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -10,7 +10,7 @@ import Button from "./Button.astro";
 
 <section>
   <div class="container container-large">
-    <div class="padding-global py-36">
+    <div class="padding-global py-24 lg:py-36">
       <div class="padding-extra">
         <div>
           <h2 class="text-center mb-3">Don't just take it from me.</h2>
