--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -49,6 +49,7 @@ import { Image } from "astro:assets";
             width="400"
             height="400"
             class="rounded-xl w-full"
+            loading="eager"
           />
         </div>
       </div>
