changed hero image loading to sync

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -50,6 +50,7 @@ import { Image } from "astro:assets";
             height="400"
             class="rounded-xl w-full"
             loading="eager"
+            decoding="sync"
           />
         </div>
       </div>
