--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -1,7 +1,7 @@
 ---
-import { Swiper, SwiperSlide } from "swiper/react";
-import "swiper/css";
-import Carousel from "./Carousel.jsx";
+// import { Swiper, SwiperSlide } from "swiper/react";
+// import "swiper/css";
+// import Carousel from "./Carousel.jsx";
 import Card from "./Card.astro";
 import caroline from "../images/people/caroline.jpeg";
 import georgia from "../images/people/georgia-pettit.png";
