added form redirect

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -60,6 +60,7 @@ import H3 from "../components//H3.astro";
                 method="POST"
                 data-netlify="true"
                 class="space-y-4"
+                action="/thank-you"
               >
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                   <div>
@@ -124,7 +125,7 @@ import H3 from "../components//H3.astro";
                   <input name="bot-field" class="hidden" />
                 </div>
                 <div>
-                  <Button text="Get In Touch" type="primary" />
+                  <Button text="Send Message" type="primary" />
                 </div>
               </form>
             </div>
