--- a/src/pages/thank-you.astro
+++ b/src/pages/thank-you.astro
@@ -18,7 +18,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
         <div class="container container-large">
           <div class="padding-global">
             <div
-              class="flex flex-col items-center justify-center gap-6 mb-[15%]"
+              class="flex flex-col items-center justify-center text-center gap-6 mb-[15%] min-h-[50vh]"
             >
               <h1>Thanks for your message!</h1>
               <h4>I'll get back to you ASAP.</h4>
