--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -59,6 +59,7 @@ import H3 from "../components//H3.astro";
                 name="contact-form"
                 method="POST"
                 data-netlify="true"
+                netlify-honeypot="bot-field"
                 class="space-y-4"
                 action="/thank-you"
               >
