added resume and links

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -17,12 +17,15 @@ import Icons from "./Icons.astro";
               class="bg-slate-900 px-8 rounded-full flex items-center gap-4 h-14 drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)]"
             >
               <div class="flex items-center gap-6">
-                <HeaderLink href="/" text="Home">Home</HeaderLink>
-                <HeaderLink href="/#portfolio" text="Portfolio">
-                  Portfolio
-                </HeaderLink>
+                <HeaderLink href="/" text="Home" />
+                <HeaderLink href="/#portfolio" text="Portfolio" />
+                <HeaderLink
+                  href="/Thomas Faddegon - Resume 2024.pdf"
+                  text="Resume"
+                />
+
                 <!-- <HeaderLink href="/blog">Blog</HeaderLink> -->
-                <HeaderLink href="/contact" text="Contact">Contact</HeaderLink>
+                <HeaderLink href="/contact" text="Contact" />
               </div>
             </div>
             <Icons />
@@ -76,6 +79,7 @@ import Icons from "./Icons.astro";
           text="Contact"
         />
 
+        <HeaderLink href="/Thomas Faddegon - Resume 2024.pdf" text="Resume" />
         <Icons />
       </div>
     </div>
