--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -77,11 +77,15 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
       <div
         class="flex items-center justify-center mt-8 mb-8 gap-4 flex-col md:flex-row"
       >
-        <Button text="Get in Touch" type="tertiary" link="/contact" />
         <Button
           text="LinkedIn"
-          type="secondary"
+          type="tertiary"
           link="https://www.linkedin.com/in/thomasfaddegon/"
+        />
+        <Button
+          text="My Resume"
+          type="secondary"
+          link="/Thomas Faddegon - Resume 2024.pdf"
         />
       </div>
     </div>
