--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -15,10 +15,7 @@ const optimizedBackground = await getImage({
 > -->
 <div id="portfolio" class="relative top-[-60px] invisible"></div>
 
-<div
-  style={`background-image: url('${optimizedBackground.src}'); background-size: cover; background-repeat: no-repeat; background-position: bottom left;`}
-  class="gradient-background min-h-96"
->
+<div class="gradient-background min-h-96">
   <div class="container container-large">
     <div class="padding-global py-32">
       <h2 class="text-center mb-20">Recent Work</h2>
