--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -163,3 +163,24 @@ span {
   /* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
   white-space: nowrap;
 }
+
+.gradient-background {
+  /* background: linear-gradient(-45deg, #121275 20%, #5b5bfa, #732669); */
+  /* background: linear-gradient(-45deg, #732669 10%, #121275 15%, #5b5bfa 95%); */
+  /* background: linear-gradient(-45deg, #5b5bfa, #732669 50%, #121275 75%); */
+  background: linear-gradient(135deg, #4b4bfa 45%, #732669 70%, #121275 90%);
+  background-size: 400% 400%;
+  animation: gradient 25s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
