--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -90,7 +90,6 @@ import Icons from "./Icons.astro";
 
 <style>
   header {
-    top: 20px;
     background-color: rgba(0, 0, 0, 0);
     transition:
       top 0.6s,
@@ -102,6 +101,12 @@ import Icons from "./Icons.astro";
   h2 {
     margin: 0;
     font-size: 1em;
+  }
+
+  @media (min-width: 768px) {
+    header {
+      top: 20px;
+    }
   }
 
   @media (max-width: 768px) {
