added plausible tracking snippet

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -33,10 +33,13 @@ import { Image } from "astro:assets";
             <Button text="Get in Touch" type="primary" link="/contact" />
             <Button text="See My Work" type="secondary" link="#portfolio" />
           </div>
-          <div class="text-sm uppercase underline flex flex-wrap gap-5 mt-1">
+          <div class="text-sm uppercase flex flex-wrap gap-4 mt-1">
             <h6>Front-End Development</h6>
+            <span>|</span>
             <h6>UX/UI</h6>
+            <span>|</span>
             <h6>Product Strategy</h6>
+            <span>|</span>
             <h6>Data Analysis</h6>
           </div>
         </div>
