--- a/src/components/Philosophy.astro
+++ b/src/components/Philosophy.astro
@@ -33,11 +33,7 @@ import graphic from "../images/graphics/graphic-1.webp";
                   development, and product strategy. I specialize in steering
                   new creations from the initial concept stage through to
                   completion, as well as refining existing products with best
-                  practices and data-driven insights. The experience of the user
-                  lies at the heart of all my recommendations, as <strong
-                    >the success of a product is often determined not by the
-                    code, but by how it makes its users feel.</strong
-                  >
+                  practices and data-driven insights.
                 </p>
 
                 <p>
