--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -27,8 +27,19 @@ const { header, image, tags, text, link } = Astro.props as Props;
     </div>
     <div class="lg:col-span-7 flex flex-col gap-4">
       <h3 class="font-bold">{header}</h3>
-      <div class="flex flex-row flex-wrap">
-        {tags.map((tag) => <h6 class="mr-5">{tag}</h6>)}
+      <div class="flex flex-row flex-wrap gap-4">
+        {
+          tags.map((tag, index) => {
+            return index !== 0 ? (
+              <>
+                <span class="translate-y-[-2px]">|</span>
+                <h6>{tag}</h6>
+              </>
+            ) : (
+              <h6>{tag}</h6>
+            );
+          })
+        }
       </div>
       <p class="">{text}</p>
       <div><Button text="See Project" type="tertiary" /></div>
