--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,10 @@ const optimizedBackground = await getImage({
 <html lang="en">
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <script
+      defer
+      data-domain="thomasfaddegon.dev"
+      src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
     <main class="min-h-screen">
