--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -125,7 +125,7 @@ h6 {
   font-weight: 400;
   font-size: 0.85rem;
   text-transform: uppercase;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   letter-spacing: 1px;
 }
 
