--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -33,7 +33,7 @@ import { Image } from "astro:assets";
             <Button text="Get in Touch" type="primary" link="/contact" />
             <Button text="See My Work" type="secondary" link="#portfolio" />
           </div>
-          <div class="text-sm uppercase flex flex-wrap gap-4 mt-1">
+          <div class="text-sm uppercase flex flex-wrap gap-x-4 gap-y-2 mt-1">
             <h6>Front-End Development</h6>
             <span>|</span>
             <h6>UX/UI</h6>
