--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -9,25 +9,33 @@ export interface Props {
   tags: string[];
   text: string;
   link: string;
+  links?: { [key: string]: string };
 }
 
-const { header, image, tags, text, link } = Astro.props as Props;
+const { header, image, tags, text, link, links } = Astro.props as Props;
+
+// let linkStyles;
+// if (Object.keys(links).length > 1) {
+//   linkstyles = "grid-cols-1";
+// }
 ---
 
 <div class="bg-black rounded-xl p-10">
   <div class="grid grid-cols-1 lg:grid-cols-12 gap-12">
     <div class="lg:col-span-5 drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)]">
-      <Image
-        src={projectImage}
-        alt=""
-        class="rounded-lg"
-        width="600"
-        height="450"
-      />
+      <a href={link}>
+        <Image
+          src={projectImage}
+          alt=""
+          class="rounded-lg"
+          width="600"
+          height="450"
+        /></a
+      >
     </div>
     <div class="lg:col-span-7 flex flex-col gap-4">
       <h3 class="font-bold">{header}</h3>
-      <div class="flex flex-row flex-wrap gap-4">
+      <div class="flex flex-row flex-wrap gap-x-4 gap-y-1">
         {
           tags.map((tag, index) => {
             return index !== 0 ? (
@@ -42,7 +50,36 @@ const { header, image, tags, text, link } = Astro.props as Props;
         }
       </div>
       <p class="">{text}</p>
-      <div><Button text="See Project" type="tertiary" /></div>
+      <div class="flex flex-col sm:flex-row gap-4">
+        <div>
+          <Button text="See Project" type="tertiary" />
+        </div>
+
+        {
+          links && (
+            <div
+              class={`grid sm:grid-cols-1 text-sm gap-y-2 sm:gap-y-1  ${Object.keys(links).length === 1 ? "flex items-center justify-center h-full pt-0" : ""}`}
+            >
+              {Object.entries(links).map(([text, link]) => {
+                return (
+                  <div class="">
+                    <a class="secondary-link" href={`${link}`}>
+                      {text} &nbsp; &rarr;
+                    </a>
+                  </div>
+                );
+              })}
+            </div>
+          )
+        }
+      </div>
     </div>
   </div>
 </div>
+
+<style>
+  .secondary-link:hover {
+    text-decoration: underline;
+    color: lightgrey;
+  }
+</style>
