--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -21,17 +21,13 @@ const optimizedBackground = await getImage({
 const imageRounded = rounded ? "rounded-full" : "rounded-xl";
 ---
 
-<div class=`${
+<div class=`flex h-full  ${
   classes ?? ""
 }`>
   <a href={link}>
     <div class="py-6">
-      <!-- <div
-        style={`background-image: url('${optimizedBackground.src}'); background-size: cover; background-repeat: no-repeat; background-position: bottom left;`}
-        class="card px-4 py-5 pb-8 flex flex-col items-center w-full h-full"
-      > -->
       <div
-        class="card px-4 py-5 pb-8 flex flex-col items-center w-full h-full border-2 bg-slate-900 drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)]"
+        class="card px-4 py-5 pb-8 flex flex-col items-center w-full border-2 bg-slate-900 drop-shadow-[0px_0px_5px_rgba(255,255,255,0.75)]"
       >
         <div
           class=`max-w-36 flex items-center w-full mb-4 ${imageRounded} overflow-hidden`
