--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -20,25 +20,25 @@ import designIcon from "../images/icons/design-icon.png";
         <div class="flex items-center justify-center">
           <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12"> -->
           <div
-            class="flex flex-col items-center justify-center md:flex-row md:flex-wrap padding-extra max-w-2xl lg:max-w-none w-full"
+            class="flex flex-col justify-center md:flex-row md:flex-wrap padding-extra max-w-2xl lg:max-w-none w-full items-center"
           >
             <Card
               header="Front-End Development"
-              text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant web experiences."
+              text="I specialize in cutting-edge web development technologies including Javascript, Typescript, React, Next, and Astro to build responsive, accessible, and performant digital experiences."
               icon={codeIcon}
-              classes="md:pr-6 lg:w-1/2 xl:w-1/3 "
+              classes="lg:pr-6 lg:w-1/2 xl:w-1/3 h-full"
             />
             <Card
               header="User-Experience Design"
               text="Using my extensive background in  copywriting, UI design, and user research, I create highly-intuitive interfaces and seamless customer journeys that foster lasting user engagement and loyalty."
               icon={designIcon}
-              classes="md:px-3 lg:w-1/2 xl:w-1/3 "
+              classes="lg:px-3 lg:w-1/2 xl:w-1/3 h-full"
             />
             <Card
               header="Data-Driven Optimization"
               text="I make analytics-based improvements that boost KPIs and increase conversions by effectively utilizing tools like Google Analytics, Optimizely, and a variety of Python data and visualization libraries."
               icon={dataIcon}
-              classes="lg:pl-6 lg:w-1/2 xl:w-1/3 "
+              classes="lg:pl-6 lg:w-1/2 xl:w-1/3 h-full"
             />
           </div>
         </div>
