--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -81,11 +81,13 @@ import newPaltzIcon from "../images/icons/new-paltz-icon.png";
           text="LinkedIn"
           type="tertiary"
           link="https://www.linkedin.com/in/thomasfaddegon/"
+          target="_blank"
         />
         <Button
           text="My Resume"
           type="secondary"
           link="/Thomas Faddegon - Resume 2024.pdf"
+          target="_blank"
         />
       </div>
     </div>
