--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -18,7 +18,7 @@ import Icons from "./Icons.astro";
             >
               <div class="flex items-center gap-6">
                 <HeaderLink href="/" text="Home" />
-                <HeaderLink href="/#portfolio" text="Portfolio" />
+                <!-- <HeaderLink href="/#portfolio" text="Portfolio" /> -->
                 <HeaderLink
                   href="/Thomas Faddegon - Resume 2024.pdf"
                   text="Resume"
@@ -68,11 +68,11 @@ import Icons from "./Icons.astro";
       >
         <HeaderLink href="/" classNames="block text-xl px-4 py-2" text="Home" />
 
-        <HeaderLink
+        <!-- <HeaderLink
           href="/#portfolio"
           classNames="block text-xl px-4 py-2 bg-blue-700"
           text="Portfolio"
-        />
+        /> -->
         <HeaderLink
           href="/contact"
           classNames="block text-xl px-4 py-2"
