--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -4,7 +4,7 @@
 // import Carousel from "./Carousel.jsx";
 import Card from "./Card.astro";
 import caroline from "../images/people/caroline.jpeg";
-import georgia from "../images/people/georgia-pettit.png";
+import georgia from "../images/people/georgia.jpeg";
 import Button from "./Button.astro";
 ---
 
@@ -24,7 +24,7 @@ import Button from "./Button.astro";
             <Card
               header="Georgia Pettit"
               title="Co-Founder @ The Luminary Agency"
-              text="Tom's data-driven approach to website optimization was a game-changer for our online business. His ability to translate analytics into actionable insights led to a remarkable increase in our conversion rates. His expertise in user engagement strategies has been invaluable to our team."
+              text="Tom's data-driven approach to website optimization was a game-changer for our agency. His ability to translate analytics into actionable insights led to a remarkable increase in our conversion rates across all of our clients, and his development knowledge was invaluable in implementing these changes."
               icon={georgia}
               link="https://www.linkedin.com/in/georgiapettit/"
               classes="w-full lg:w-1/2"
